# FavePersonal

## Version 1.5

- (change) Update the included Social plugin to version 2.10 (fixes threaded comments)
- (change) Update the included Post Formats Admin UI plugin to version 1.3.1 (WP 3.8 admin UI)
- (change) Update the included CF Colors plugin to version 2.1 (WP 3.8 admin UI)
- (change) admin UI refresh for WordPress 3.8 compatibility

## Version 1.4.1

- (change) Update the included Post Formats Admin UI plugin to version 1.2

## Version 1.4

- (feature) Add ability to insert shortcodes in Bio Widget
- (feature) Include Carrington Core v3.7
- (change) Gallery navigation arrows now match bio widget arrows.
- (change) Reduce footer link to single URL per WordPress.org guideline
- (change) Remove option to hide credit link
- (fix) Gallery captions and descriptions were flickering the wrong information the first time through
- (fix) Bio Widget links were using the same custom icon for all links in rare instances
- (fix) Proper version number for update checking
- (fix) Don't show comments/form for post types that don't support them
- (fix) Put in production mode to use built CSS files
- (fix) Child theme download works as expected
- (fix) Point documentation links to updated URLs

## Version 1.3

- Added Image and Video post format archive templates
- Broadcasting of post formats image and video to Facebook use native Facebook formats
- Gallery shortcodes with specified post ids now work properly in RSS feeds
- Use ColourLovers instead of Adobe Kuler for color sets
- Make spacing between posts in mobile views more consistent
- Addressed bug in Bio Widget admin that would cause the favicon lookup to pause indefinitely when pressing enter in the URL field for a link
- Updated Bio Widget link admin so that pressing enter when the "Add" button is focused triggers the "click" action on that button
- Addressed bug with responsive resizing of captioned images in front end.
- Updated to Social 2.9.2
- Presumptive WordPress 3.6 compatibility

## Version 1.2
